fix: fix merge conflicts
