# server/config/passport.js
@@ -29,49 +29,76 @@ const facebookAppId = process.env.FACEBOOK_APP_ID;
 const facebookAppSecret = process.env.FACEBOOK_APP_SECRET;
 const facebookReturnUrl = process.env.FACEBOOK_RETURN_URL;
 
-const handleSocialLogin = async (email, firstname, lastname, username, photo, cb) => { 
-  try{
-    const existingUser = await User.findOne({ where: { email } })
+/**
+ *
+ * @param {string} email - User email
+ * @param {string} firstname - User's firstname
+ * @param {string} lastname - User's lastname
+ * @param {string} username - User's username
+ * @param {string} photo - Link to User's image
+ * @param {callback} cb - Callback function\
+ * @returns {method} - A callback function
+ */
+async function handleSocialLogin(email,
+  firstname,
+  lastname,
+  username,
+  photo,
+  cb) {
+  try {
+    const existingUser = await User.findOne({ where: { email } });
     return cb(null, {
       data: existingUser.dataValues
     });
+  } catch (error) {
+    const user = await User.create({
+      email,
+      firstname,
+      lastname,
+      username: username
+        ? `${username}-${new Date().getTime()}`
+        : `${firstname ? firstname.toLowerCase() : email}${
+          lastname ? lastname.toLowerCase() : ''
+        }-${new Date().getTime()}`,
+      image: photo
+    });
+    return cb(null, { data: user.dataValues });
   }
-    catch{
-      const user = await User.create({
-        email,
-        firstname,
-        lastname,
-        username: username ? `${username}-${new Date().getTime()}` : `${firstname ? firstname.toLowerCase() : email}${lastname ? lastname.toLowerCase() : ''}-${new Date().getTime()}`,
-        image: photo,
-      })
-      return cb(null, { data: user.dataValues })
-    }
-};
+}
 
-passport.use(
-  new GoogleStrategy({
-    clientID: googleClientId,
-    clientSecret: googleClientSecret,
-    callbackURL: googleReturnUrl
-  }, (accessToken, refreshToken, profile, cb) => {
-    const { name, emails, photos } = profile;
-    handleSocialLogin(emails[0].value, name.givenName, name.familyName, null, photos[0].value, cb);
-  })
-);
+passport.use(new GoogleStrategy({
+  clientID: googleClientId,
+  clientSecret: googleClientSecret,
+  callbackURL: googleReturnUrl
+},
+(accessToken, refreshToken, profile, cb) => {
+  const { name, emails, photos } = profile;
+  handleSocialLogin(emails[0].value,
+    name.givenName,
+    name.familyName,
+    null,
+    photos[0].value,
+    cb);
+}));
 
 passport.use(new TwitterStrategy({
   consumerKey: twitterConsumerKey,
   consumerSecret: twitterConsumerSecret,
   callbackURL: twitterReturnUrl,
-  userProfileURL: 'https://api.twitter.com/1.1/account/verify_credentials.json?include_email=true',
+  userProfileURL:
+        'https://api.twitter.com/1.1/account/verify_credentials.json?include_email=true',
   includeEmail: true,
   proxy: trustProxy
 },
 (token, tokenSecret, profile, cb) => {
   const { username, emails, photos } = profile;
-  handleSocialLogin(emails[0].value, null, null, username, photos[0].value, cb);
-})
-);
+  handleSocialLogin(emails[0].value,
+    null,
+    null,
+    username,
+    photos[0].value,
+    cb);
+}));
 
 passport.use(new FacebookStrategy({
   clientID: facebookAppId,
@@ -84,8 +111,12 @@ passport.use(new FacebookStrategy({
   const splitnames = displayName.split(' ');
   const firstname = splitnames[0];
   const lastname = splitnames.length > 1 ? splitnames[1] : '';
-  handleSocialLogin(emails[0].value, firstname, lastname, null, photos[0].value, cb);
-})
-);
+  handleSocialLogin(emails[0].value,
+    firstname,
+    lastname,
+    null,
+    photos[0].value,
+    cb);
+}));
 
 export default passport;
