# server/controllers/user.js
@@ -1,10 +1,10 @@
-/* eslint-disable class-methods-use-this */
+import '@babel/polyfill';
 import dotenv from 'dotenv';
 import db from '../database/models';
 import { HelperUtils } from '../utils';
 import response from '../utils/response';
 import verifyEmailMarkup from '../utils/markups/emailVerificationMarkup';
-import '@babel/polyfill';
+import passwordResetMarkup from '../utils/markups/passwordResetMarkup';
 
 const { User } = db;
 dotenv.config();
@@ -25,24 +25,27 @@ export default class Users {
     const {
       firstname, lastname, username, email, password
     } = req.body;
+    const { body } = req;
 
-    const hash = HelperUtils.hashPassword(password);
-    const hashedEmail = HelperUtils.hashPassword(email);
+    const hash = await HelperUtils.hashPassword(password);
+    const hashedEmail = await HelperUtils.hashPassword(email);
 
-    const formInputs = {
-      firstname, lastname, username, email, password: hash
-    };
+    const formInputs = { ...body, password: hash };
     try {
       const createUser = await User.create(formInputs);
-      const token = HelperUtils.generateToken(formInputs);
+
+      const encryptDetails = {
+        id: createUser.id, firstname, lastname, username, email
+      };
+      const token = await HelperUtils.generateToken(encryptDetails);
+
       const name = typeof username !== 'undefined' ? username : `${lastname}, ${firstname}`;
-      HelperUtils.sendMail(
-        email,
+
+      await HelperUtils.sendMail(email,
         'Authors Haven <no-reply@authorshaven.com>',
         'Email Verification',
         'Verify Email',
-        verifyEmailMarkup(name, email, hashedEmail)
-      );
+        verifyEmailMarkup(name, email, hashedEmail));
 
       response(res).created({
         message: 'user created successfully',
@@ -55,7 +58,7 @@ export default class Users {
         }
       });
     } catch (err) {
-      res.status(400).json({ message: err });
+      response(res).sendData(500, err);
     }
   }
 
@@ -76,7 +79,7 @@ export default class Users {
         where: { email }
       });
       if (!user) {
-        res.status(404).json({
+        response(res).notFound({
           message: 'user doesn\'t exist',
         });
       } else {
@@ -88,27 +91,118 @@ export default class Users {
         });
       }
     } else {
-      res.status(400).json({ message: 'invalid email' });
+      response(res).badRequest({ message: 'invalid email' });
     }
   }
 
   /**
-* @description This controller method completes the social sign in process
-*
-* @param {object} req - Express request object
-* @param {object} res - Express response object
-* @return {undefined}
-*/
+   * @description This controller method sends password reset link e-mail
+   *
+   * @param {object} req - Express request object
+   * @param {object} res - Express response object
+   * @returns {object} Json response
+   */
+  static async resetPasswordEmail(req, res) {
+    const { email } = req.body;
+
+    const hashedEmail = HelperUtils.hashPassword(email);
+
+    try {
+      const user = await User.findOne({
+        where: { email }
+      });
+
+      if (user === null) {
+        response(res).notFound({
+          message: 'user not found in our records'
+        });
+      } else {
+        HelperUtils.sendMail(email,
+          'Authors Haven <no-reply@authorshaven.com>',
+          'Password Reset',
+          'Reset Password',
+          passwordResetMarkup(user.firstname, email, hashedEmail));
+        response(res).success({
+          message: 'Please, verify password reset link in your email box'
+        });
+      }
+    } catch (err) {
+      response(res).sendData(400, {
+        message: err
+      });
+    }
+  }
+
+  /**
+   * @description This controller method resets user password
+   *
+   * @param {object} req - Express request object
+   * @param {object} res - Express response object
+   * @return {object} Json response
+   */
+  static async resetPassword(req, res) {
+    const { newPassword, confirmPassword } = req.body;
+    const isPassword = newPassword === confirmPassword;
+
+    if (!isPassword) {
+      return response(res).sendData(400, {
+        message: 'The supplied passwords do not match'
+      });
+    }
+
+    try {
+      const hashPassword = HelperUtils.hashPassword(newPassword);
+
+      const { email, hash } = req.query;
+      const isEmail = await HelperUtils.comparePasswordOrEmail(email, hash);
+
+      if (isEmail) {
+        const user = await User.findOne({
+          where: { email }
+        });
+
+        if (!user) {
+          response(res).notFound({
+            message: 'User not found'
+          });
+        } else {
+          await user.update({
+            password: hashPassword
+          });
+          response(res).success({
+            message:
+              'Password reset successful. Please, login using your new password.'
+          });
+        }
+      } else {
+        response(res).sendData(400, {
+          message: 'Invalid password reset link'
+        });
+      }
+    } catch (err) {
+      response(res).sendData(400, {
+        message: err
+      });
+    }
+  }
+
+  /**
+   * @description This controller method completes the social sign in process
+   *
+   * @param {object} req - Express request object
+   * @param {object} res - Express response object
+   * @return {undefined}
+   */
   static async socialLogin(req, res) {
     const { data } = req.user;
 
-    try{
+    try {
       const userToken = await HelperUtils.generateToken(data);
-  
+
       const {
         email, username, bio, image
       } = data;
-  
+
       response(res).success({
         message: 'user logged in successfully',
         user: {
@@ -116,11 +210,10 @@ export default class Users {
           username,
           bio,
           image,
-          token: userToken,
+          token: userToken
         }
       });
-    }
-    catch{
+    } catch (err) {
       response(res).serverError({
         message: 'token could not be generated, please try again later'
       });
