# swagger.yaml
@@ -115,6 +115,7 @@ paths:
       summary: "Returns all tags"
       description: "Returns all the tags an article could have"
       produces:
+      - "application/xml"
       - "application/json"
       responses:
         200:
@@ -202,6 +203,8 @@ paths:
       produces:
       - "text/html"
       responses:
+        403:
+          description: "you cannot unfollow yourself"
         200:
           description: "user logged in successfully"
   /users/auth/facebook:
@@ -216,17 +219,158 @@ paths:
         200:
           description: "user logged in successfully"
 
+  /users/verifyemail:
+  get:
+    tags:
+    - "users"
+    summary: "Verifies a new user"
+    description: "Verifies a new users email"
+    consumes:
+      - "application/json"
+    produces:
+    - "application/json"
+    parameters:
+    - in: "body"
+    responses:
+      200:
+        description: "email verified successfully"
+      400:
+        description: "invalid email"
+
+  /users/auth/google:
+  get:
+    tags:
+    - "users"
+    summary: "Signs users in with google"
+    description: "Redirects to google authentication page to seek their permission to share their information with the platform"
+    produces:
+    - "text/html"
+    responses:
+      200:
+        description: "user logged in successfully"
+
+  /users/auth/facebook:
+  get:
+    tags:
+    - "users"
+    summary: "Signs users in with facebook"
+    description: "Redirects to facebook authentication page to seek their permission to share their information with the platform"
+    produces:
+    - "text/html"
+    responses:
+      200:
+        description: "user logged in successfully"
+
   /users/auth/twitter:
-    get:
+  get:
+    tags:
+    - "users"
+    summary: "Signs users in with twitter"
+    description: "Redirects to twitter authentication page to seek their permission to share their information with the platform"
+    produces:
+    - "text/html"
+    responses:
+      200:
+        description: "user logged in successfully"
+securityDefinitions:
+  authorization:
+    type: "apiKey"
+    name: "api_key"
+    in: "header"
+definitions:
+  Order:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      petId:
+        type: "integer"
+        format: "int64"
+      quantity:
+        type: "integer"
+        format: "int32"
+      shipDate:
+        type: "string"
+        format: "date-time"
+      status:
+        type: "string"
+        description: "Order Status"
+        enum:
+        - "placed"
+        - "approved"
+        - "delivered"
+      complete:
+        type: "boolean"
+        default: false
+    xml:
+      name: "Order"
+  Category:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+    xml:
+      name: "Category"
+  User:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      username:
+        type: "string"
+      firstName:
+        type: "string"
+      lastName:
+        type: "string"
+      email:
+        type: "string"
+      password:
+        type: "string"
+      phone:
+        type: "string"
+      userStatus:
+        type: "integer"
+        format: "int32"
+        description: "User Status"
+    xml:
+      name: "User"
+  Tag:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+    xml:
+      name: "Tag"
+  Pet:
+    type: "object"
+    required:
+    - "name"
+    - "photoUrls"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      category:
+        $ref: "#/definitions/Category"
+      name:
+        type: "string"
+        example: "doggie"
+      photoUrls:
+        type: "array"
+        xml:
+          name: "photoUrl"
+          wrapped: true
+        items:
+          type: "string"
       tags:
-      - "users"
-      summary: "Signs users in with twitter"
-      description: "Redirects to twitter authentication page to seek their permission to share their information with the platform"
-      produces:
-      - "text/html"
-      responses:
-        200:
-          description: "user logged in successfully"
           
 securityDefinitions:
   authorization:
